# RGR

./: CMakeLists.txt  README.md  main.cpp  setup.sh
data/: input.txt  output.txt
include/encryption/: ColumnarTransposition.h  HillChiper.h  HillCipher.h  MagicSquareCipher.h  MagmaCipher.h
include/files_utils/: FilesUtils.h
include/menu/: Menu.h
src/encryption/: ColumnarTransposition.cpp  HillChiper.cpp  HillCipher.cpp  MagicSquareCipher.cpp  MagmaCipher.cpp
src/file_utils/: FilesUtils.cpp
src/menu/: Menu.cpp
